[package]
name = "gofer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spmc = "0.3.0"
spake2 = "0.3.1"
aes = "0.8.2"

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "handler"
path = "server/src/handler.rs" 